--- a/style.css
+++ b/style.css
@@ -22,11 +22,31 @@ html {
     flex-flow: column;
     align-items: center;
     justify-content: center;
+    flex-direction: row;
     width: 100%;
     height: 100%;
   }
   
+  .container .history {
+    display: flex;
+    flex-flow: column;
+    border-left: 2px rgba(179, 155, 254, 75%) solid;
+    background-color: rgb(250 241 255);
+    width: 240px;
+    height: 516px;
+  }
+
+  .history {
+    display: flex;
+    overflow-y: scroll;
+    flex-flow: column;
+    flex-direction: column;
+  }
   
+  .history-text {
+    margin: 10px;
+    text-align: right;
+  }
   
   .wrapper {
     /* width: 90%;
